[WIP][T6268]Readme file changes

--- a/connector_clickup/connector_clickup/views/project_task_view.xml
+++ b/connector_clickup/connector_clickup/views/project_task_view.xml
@@ -43,7 +43,10 @@
 
             </header>
             <xpath expr="//field[@name='tag_ids']" position="after">
-                <field name="estimated_cost" />
+                <field
+                    name="estimated_cost"
+                    attrs="{'invisible': [('estimated_cost', '=', False)]}"
+                />
 
             </xpath>
             <xpath expr="//page[@name='extra_info']" position="after">
