--- a/connector_clickup/projects_task_checklists/views/project_task_view.xml
+++ b/connector_clickup/projects_task_checklists/views/project_task_view.xml
@@ -7,7 +7,12 @@
         <field name="inherit_id" ref="project.view_task_form2" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='tag_ids']" position="after">
-                <field name="checklist_ids" widget="many2many_tags" invisible="1" />
+                <field name="checklist_ids" widget="many2many_tags" />
+                <field
+                    name="checklist_progress"
+                    widget="progressbar"
+                    attrs="{'invisible':[('checklist_ids','=',[])]}"
+                />
             </xpath>
             <xpath expr="//form/sheet/notebook" position="inside">
                 <page
